--- a/home/static/css/job_list.css
+++ b/home/static/css/job_list.css
@@ -6,6 +6,8 @@
     background: #f9f9f9;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    margin-top: 50px;
+
 }
 
 .job-list-title {
