--- a/job/templates/job/job_detail.html
+++ b/job/templates/job/job_detail.html
@@ -61,7 +61,7 @@
     </div>
 
     <div class="job-detail-apply-btn">
-      <a href="{% url 'job_apply' job.slug %}" class="btn">ỨNG TUYỂN NGAY</a>
+      <a href="{% url 'job_apply' job.slug %}" class="btn-job-detail">ỨNG TUYỂN NGAY</a>
     </div>
   </div>
   <div class="job-related-container">
