--- a/gallery/templates/gallery/gallery.html
+++ b/gallery/templates/gallery/gallery.html
@@ -1,4 +1,4 @@
-{% extends "home/base.html" %}
+{% comment %} {% extends "home/base.html" %}
 {% block content %}
 <section class="gallery-section">
     <div class="gallery-container">
@@ -38,19 +38,8 @@
 </section>
 
 <script>
-function openGalleryTab(tabName) {
-    document.querySelectorAll('.gallery-tab-content').forEach(tab => {
-        tab.style.display = "none";
-    });
-    document.getElementById(tabName).style.display = "block";
 
-    document.querySelectorAll('.gallery-tab-btn').forEach(btn => {
-        btn.classList.remove("active");
-    });
-    event.currentTarget.classList.add("active");
-}
-document.getElementById("gallery-images").style.display = "block";
 </script>
 
 
-{% endblock %}
+{% endblock %} {% endcomment %}
