--- a/home/static/css/footer.css
+++ b/home/static/css/footer.css
@@ -1,13 +1,16 @@
 footer {
     background: linear-gradient(135deg, #005bea, #00c6fb);
-    color: white;
     padding: 40px 0;
     text-align: center;
     font-family: 'Quicksand', sans-serif;
     box-shadow: 0px -4px 15px rgba(0, 0, 0, 0.3);
     position: relative;
     overflow: visible;
+    margin-top: 150px;
+    color: white;
+
 }
+
 
 /* Hiệu ứng ánh sáng chạy ngang */
 footer::before {
