--- a/home/static/css/job_detail.css
+++ b/home/static/css/job_detail.css
@@ -141,3 +141,18 @@ body {
 .btn-small:hover {
     background: #0056b3;
 }
+.btn-job-detail {
+    display: inline-block;
+    padding: 8px 12px;
+    background: #007bff;
+    color: white;
+    text-decoration: none;
+    border-radius: 5px;
+    margin-top: 20px;
+}
+
+.btn-job-detail:hover {
+    background: #0056b3;
+    transform: translateY(-5px);
+
+}
