--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -21,6 +21,7 @@
   <script src="{% static 'js/gallery.js' %}" defer></script>
   <script src="{% static 'js/apply.js' %}" defer></script>
   <script src="{% static 'js/job-home-filter.js' %}" defer></script>
+  <link rel="icon" href="{% static 'favicon.ico' %}" type="image/x-icon">
 
   <link href="https://fonts.googleapis.com/css2?family=Cabin&family=Quicksand:wght@400;700&display=swap" rel="stylesheet" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
@@ -110,7 +111,7 @@
         </ul>
       </div>
       <div class="footer-social"></div>  <!-- Thêm phần tử này để chứa iframe -->
-      <script>
+      {% comment %} <script>
         document.addEventListener("DOMContentLoaded", function () {
           try {
             var iframe = document.createElement("iframe");
@@ -130,7 +131,7 @@
             console.error("Không thể tạo hoặc hiển thị iframe:", error);
           }
         });
-      </script>
+      </script> {% endcomment %}
 
     </div>
 
